syntax = "proto3";

package platform;

option go_package = "proto/pb";

message Project {
  Metadata metadata = 1;
  Cluster cluster = 2;
  string public_key = 3;
  string private_key = 4;
}

message Cluster {
  Metadata metadata = 1;
  Network network = 2;
  repeated Node nodes = 3;
  string kubernetes_version = 4;
}

message Network {
  string ip = 1;
  string mask = 2;
}

message Node {
  string public_ip = 1;
  string private_ip = 2;
  string provider = 3;
  bool isControlPlane = 4;
  string server_type = 5;
  string image = 6;
}

message Metadata {
  string name = 1;
  string id = 2;
}
